# PicoBB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all  distclean  licence.txt  pico_examples.cfg
boards/: pico+w.h  pico.h  pico2+w.h  pico2.h  pico2_w.h  pico_w.h  picocalc.h  vgaboard_cut.h  vgaboard_cut_w.h  vgaboard_sd.h  vgaboard_sd_w.h  vgaboard_serial.h  vgaboard_serial_w.h  wslcd35.h
console/linux/: makefile
console/pico/: Makefile
console/pico/examples/: animal.bbc  basrun.bbc  entertainer.bbc  fibo10k.bbc  median.bbc  patience.bbc  pico_client.bas  pico_lanchat.bas  pico_server.bas  picowav.bbc  solve.bbc  sorttest.bbc  tcp_client.bas  tcp_server.bas  widor.bbc  wifi_cfg.bas  wifi_scan.bas
console/pico/examples/lib/: arraylib.bbc  socklib.bas  socklib.bbc
console/pico/examples_tp/: tp_draw.bas  tp_draw.bbc  tp_setup.bas  tp_setup.bbc
console/pico/examples_w/: lanchat.bbc  mysqldem.bas  mysqldem.bbc  tftp_server.bas  tftp_server.bbc  wifi_scan.bbc
console/pico/examples_w/lib/: socklib.bas  socklib.bbc
console/pico/lib/: arraylib.bbc
console/pico_v/: Makefile
console/pico_w/: Makefile  test.txt
console/pico_w/examples/: dns_lookup.bas  lanchat.bas  mysqldem.bbc  wifi_cfg.bas  wifi_cfg.bbc  wifi_scan.bas  wifi_scan.bbc
console/pico_w/examples/lib/: socklib.bas  socklib.bbc
console/raspi/: makefile
docs/: PicoCalc_Notes.html  index.html
filesystem/extra/: taxman.bbc
include/: BBC.h  bbccfg.h  bbccon.h  bbcptr.h  bbuart.h  btstack_config.h  fbufctl.h  fbufvdu.h  ffconf.h  framebuf.h  heap.h  lfsmcu.h  lfswrap.h  lwipopts.h  network.h  periodic.h  picocli.h  picocos.h  qspi.h  stdio_bt.h  vducmd.h  zmodem.h
include/pico/: sd_spi.h
include/pico_gui/: tusb_config.h
src/: asmtest.mak  asmtest_v8m.s  bbasmb_arm_v8m.c  bbccos.c  bbdata_arm_32a.s  bbeval2.c  bbexec2.c  bbmain.c  bbpico.c  fbufctl.c  fbufvdu.c  framebuf.c  heap.c  lfsmcu.c  lfswrap.c  picocli.c  vducmd.c
src/PicoCalc/: pc_kbd.c  pc_lcd.c  qspi.c  qspi.pio
src/lfsutil/: Makefile  README.md  lfsdump.c  mklfsimage.c  pico_examples.py  uf2conv.c  uf2dump.c  uf2format.h  uf2merge.c
src/lwip/: CMakeLists.txt  memp.c
src/pfs/: README.md  dirent.h  ffs_pico.c  ffs_pico.h  mount.c  pfs.h  pfs_base.c  pfs_fat.c  pfs_ffs.c  pfs_private.h  pfs_serial.c  pfs_stdio.c  picoser.c  picoser.h  pname.c  pname.h  sd_spi2.c
src/pico/: CMakeLists.txt  Makefile  PicoBB_Memory_Map.ods  bbc_pico_mc.ld  bbc_pico_net.ld  bbc_pico_net2_mc.ld  bbc_pico_net_mc.ld  cyw43_arch_threadsafe_background.c  ff_disk.c  heap.c  memmap.py  mount.c  network_cyw43.c  periodic.c  pico_boot.c  picobb_2040.ld  picobb_2350.ld  picoser.c  sd_spi2.c  sound.pio  sound_sdl.c  stack_trap.c  stdio_bt.c  sym_console.h  sym_console_cyw43_background.h  sym_console_cyw43_background_stub.c  sym_console_cyw43_gpio.h  sym_console_cyw43_gpio_stub.c  sym_console_cyw43_poll.h  sym_console_cyw43_poll_stub.c  sym_console_stub.c  sym_cyw43.txt  sym_gpio.txt  sym_gui.h  sym_gui_cyw43_background.h  sym_gui_cyw43_background_stub.c  sym_gui_cyw43_gpio.h  sym_gui_cyw43_gpio_stub.c  sym_gui_cyw43_poll.h  sym_gui_cyw43_poll_stub.c  (+9 more)
src/pico/symbols/: CMakeLists.txt  extra_cyw43_none_sdk.txt  header_funcs.py  library_functions.txt  map_funcs.py  merge_funcs.py  sdk_2040.txt  sdk_2350.txt  sdk_cyw43.txt  sdk_cyw43_background.txt  sdk_cyw43_gpio.txt  sdk_cyw43_poll.txt  sdk_headers.txt  sdk_headers_gui.txt  sdk_lwip.txt  sdk_stdio_usb.txt  sdk_v1.txt  sdk_v2.txt  sym_console.txt  sym_console_cyw43_background_map.txt  sym_console_cyw43_background_sdk.txt  sym_console_cyw43_gpio_map.txt  sym_console_cyw43_gpio_sdk.txt  sym_console_cyw43_none_sdk.txt  sym_console_cyw43_poll_map.txt  sym_console_cyw43_poll_sdk.txt  sym_console_map.txt  sym_console_sdk.txt  sym_gui.txt  sym_gui_cyw43_background_map.txt  sym_gui_cyw43_background_sdk.txt  sym_gui_cyw43_gpio_map.txt  sym_gui_cyw43_gpio_sdk.txt  sym_gui_cyw43_poll_map.txt  sym_gui_cyw43_poll_sdk.txt  sym_gui_map.txt  sym_gui_sdk.txt  sym_sdk.txt  sym_sdk_gui.txt
src/pico_gui/: gui_pico_net.ld  gui_pico_net2.ld  picofbuf.c  picokbd.c
src/wslcd35/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  LCD_Driver.c  LCD_Driver.h  LCD_Touch.c  LCD_Touch.h  wslcd35.c
tools/: 99-pico.rules  README.md  yupload.bas
